--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container">
       <div id="about_me">
         <h1 class="title">About me</h1>
-        <p>
+        <p class="text-bg-dark">
           My name is Bilal and my lastname is Ahmad and i was born on 14
           December 2004 and then i started school in my early ages and i was
           doing good at school, and i graduated from school in 2021 and then
